--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Dog Image Viewer</title>
+    <meta charset="UTF-8">
+    <title>Dog Image Viewer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h1>Dog Image Viewer</h1>
-  <label for="breed-dropdown">Select a breed:</label>
-  <select id="breed-dropdown"></select>
-  <br>
-  <button id="get-image-button">Get Image</button>
-  <button id="next-button">Next</button>
-  <br>
-  <img id="dog-image" alt="Dog Image">
-  <script src="script.js"></script>
+    <h1>Dog Image Viewer</h1>
+    <div class="container">
+        <label for="breed-dropdown">Select a breed:</label>
+        <select id="breed-dropdown"></select>
+        <br>
+        <button id="get-image-button">Get Image</button>
+        <button id="next-button">Next</button>
+        <br>
+        <img id="dog-image" alt="Dog Image">
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
